<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <!-- TextView adalah elemen yang berfungsi untuk menampilkan output berupa text -->
    <!-- wrap content adalah suatu nilai atribut yang memiliki fungsi sebagai penyesuaian tinggi dan lebar dari suatu tampilan berdasarkan isi/konten yang ada-->
    <!-- android:layout_marginTop="64dp" merupakan suatu ukuran-->
    <!-- android:textColor="@color/black" merupakan warna -->
    <TextView
        android:id="@+id/textViewLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/textLogin"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <!-- Button atau tombol biasanya memiliki fungsi untuk melakukan perintah tertentu, contohnya yaitu button login yang berfungsi untuk menampilkan halaman isian email dan password -->
    <!-- String berguna untuk mengambil suatu karakter yang diinginkan. Bisa karakter dari sebelah kiri, kanan, atau karakter yang berada ditengah-->
    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="164dp"
        android:layout_height="54dp"
        android:layout_marginStart="152dp"
        android:text="@string/btnLogin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPassword"
        app:layout_constraintVertical_bias="0.051" />

    <!-- Button atau tombol biasanya memiliki fungsi untuk melakukan perintah tertentu, contohnya yaitu button login yang berfungsi untuk menampilkan halaman isian email dan password -->
    <!-- String berguna untuk mengambil suatu karakter yang diinginkan. Bisa karakter dari sebelah kiri, kanan, atau karakter yang berada ditengah-->
    <Button
        android:id="@+id/buttonBack"
        android:layout_width="164dp"
        android:layout_height="54dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="108dp"
        android:text="@string/btnBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonLogin"
        app:layout_constraintTop_toBottomOf="@+id/textPassword" />

    <!-- EditText adalah elemen yang berfungsi untuk mengambil inputan dari user -->
    <!-- String berguna untuk mengambil suatu karakter yang diinginkan. Bisa karakter dari sebelah kiri, kanan, atau karakter yang berada ditengah-->
    <EditText
        android:id="@+id/textEmail"
        android:layout_width="207dp"
        android:layout_height="51dp"
        android:layout_marginTop="4dp"
        android:autofillHints="Email"
        android:ems="10"
        android:hint="@string/textEmail"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLogin" />

    <!-- EditText adalah elemen yang berfungsi untuk mengambil inputan dari user -->
    <!-- ConstraintLayout merupakan salah satu komponen ViewGroup yang dapat kita gunakan untuk menyusun tampilan aplikasi yang kompleks tanpa adanya nested layout-->
    <EditText
        android:id="@+id/textPassword"
        android:layout_width="220dp"
        android:layout_height="48dp"
        android:autofillHints="Password"
        android:ems="10"
        android:hint="@string/editPassword"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textEmail" />

</androidx.constraintlayout.widget.ConstraintLayout>